# msl-parser

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: main.cpp
include/msl_parser/: lexer.h  token.h
include/msl_parser/ast/: ast_node.h  ast_visitor.h
src/: ast.cpp  error.cpp  lexer.cpp  parser.cpp  token.cpp
tests/: CMakeLists.txt  test_ast_node.cpp  test_lexer.cpp  test_lexer_comment.cpp  test_lexer_delimiter.cpp  test_lexer_identifier.cpp  test_lexer_numeric.cpp  test_lexer_operator.cpp  test_lexer_string.cpp  test_token.cpp
